@@ -37,13 +37,13 @@ begin species
   L_pop() Lig_tot
 end species
 begin reaction rules
-  R1_v1:  L(r!1).R(l!1) -> R(l) + L(r)  koff
-  R2_v1:  L_pop() + R(l) -> L(r!1,r,r).R(l!1)  kp1_1
-  R2_v2:  L_pop() + R_pop() -> L(r!1,r,r).R(l!1,l)  kp1_2
-  R3_v1:  L(r!+,r,r) + R(l) -> L(r!+,r!1,r).R(l!1)  kp2
-  R3_v2:  L(r!+,r,r) + R_pop() -> L(r!+,r!1,r).R(l!1,l)  kp2_1
-  R4_v1:  L(r!+,r!+,r) + R(l) -> L(r!+,r!+,r!1).R(l!1)  kp2
-  R4_v2:  L(r!+,r!+,r) + R_pop() -> L(r!+,r!+,r!1).R(l!1,l)  kp2_2
+  _R1_v1:  L(r!1).R(l!1) -> R(l) + L(r)  koff
+  _R2_v1:  L_pop() + R(l) -> L(r!1,r,r).R(l!1)  kp1_1
+  _R2_v2:  L_pop() + R_pop() -> L(r!1,r,r).R(l!1,l)  kp1_2
+  _R3_v1:  L(r!+,r,r) + R(l) -> L(r!+,r!1,r).R(l!1)  kp2
+  _R3_v2:  L(r!+,r,r) + R_pop() -> L(r!+,r!1,r).R(l!1,l)  kp2_1
+  _R4_v1:  L(r!+,r!+,r) + R(l) -> L(r!+,r!+,r!1).R(l!1)  kp2
+  _R4_v2:  L(r!+,r!+,r) + R_pop() -> L(r!+,r!+,r!1).R(l!1,l)  kp2_2
   MapRule0:  L(r,r,r) -> L_pop()  k_gather
   MapRule1:  R(l,l) -> R_pop()  k_gather
 end reaction rules
