@@ -48,7 +48,7 @@
       </Species>
     </ListOfSpecies>
     <ListOfReactionRules>
-      <ReactionRule id="RR1" name="R1_v1" symmetry_factor="1">
+      <ReactionRule id="RR1" name="_R1_v1" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR1_RP1">
             <ListOfMolecules>
@@ -103,7 +103,7 @@
           <DeleteBond site1="RR1_RP1_M1_C1" site2="RR1_RP1_M2_C1"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR2" name="R2_v1" symmetry_factor="1">
+      <ReactionRule id="RR2" name="_R2_v1" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR2_RP1">
             <ListOfMolecules>
@@ -157,7 +157,7 @@
           <Delete id="RR2_RP1" DeleteMolecules="0"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR3" name="R2_v2" symmetry_factor="1">
+      <ReactionRule id="RR3" name="_R2_v2" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR3_RP1">
             <ListOfMolecules>
@@ -209,7 +209,7 @@
           <Delete id="RR3_RP2" DeleteMolecules="0"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR4" name="R3_v1" symmetry_factor="1">
+      <ReactionRule id="RR4" name="_R3_v1" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR4_RP1">
             <ListOfMolecules>
@@ -270,7 +270,7 @@
           <AddBond site1="RR4_RP1_M1_C2" site2="RR4_RP2_M1_C1"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR5" name="R3_v2" symmetry_factor="1">
+      <ReactionRule id="RR5" name="_R3_v2" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR5_RP1">
             <ListOfMolecules>
@@ -329,7 +329,7 @@
           <Delete id="RR5_RP2" DeleteMolecules="0"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR6" name="R4_v1" symmetry_factor="1">
+      <ReactionRule id="RR6" name="_R4_v1" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR6_RP1">
             <ListOfMolecules>
@@ -390,7 +390,7 @@
           <AddBond site1="RR6_RP1_M1_C3" site2="RR6_RP2_M1_C1"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR7" name="R4_v2" symmetry_factor="1">
+      <ReactionRule id="RR7" name="_R4_v2" symmetry_factor="1">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR7_RP1">
             <ListOfMolecules>
