@@ -46,7 +46,7 @@
       </Species>
     </ListOfSpecies>
     <ListOfReactionRules>
-      <ReactionRule id="RR1" name="R1" symmetry_factor="0.5">
+      <ReactionRule id="RR1" name="_R1" symmetry_factor="0.5">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR1_RP1">
             <ListOfMolecules>
@@ -101,7 +101,7 @@
           <AddBond site1="RR1_RP1_M1_C1" site2="RR1_RP2_M1_C1"/>
         </ListOfOperations>
       </ReactionRule>
-      <ReactionRule id="RR2" name="R1_r" symmetry_factor="0.5">
+      <ReactionRule id="RR2" name="_R1_r" symmetry_factor="0.5">
         <ListOfReactantPatterns>
           <ReactantPattern id="RR2_RP1">
             <ListOfMolecules>
